mbs-studio/ops/k8s/overlays/staging/patch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nafura-vitrine-staging
  labels:
    nafura.io/layer: vitrine
    nafura.io/env: staging
