mbs-studio/ops/k8s/overlays/staging/patch-ingress-http-only.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbs-studio-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  tls: []
